+++++++++++
Python News
+++++++++++

What's New in Python 3.3.7?
============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #24407: Fix crash when dict is mutated while being updated.

- Issue #24096: Make warnings.warn_explicit more robust against mutation of the
  warnings.filters list.

- Issue #24044: Fix possible null pointer dereference in list.sort in out of
  memory conditions.

- Issue #23055: Fixed a buffer overflow in PyUnicode_FromFormatV.  Analysis
  and fix by Guido Vranken.

Library
-------

- Issue #24521: Fix possible integer overflows in the pickle module.

- Issue #22931: Allow '[' and ']' in cookie values.

- Issue #24094: Fix possible crash in json.encode with poorly behaved dict
  subclasses.

- Issue #23367: Fix possible overflows in the unicodedata module.

- Issue #23361: Fix possible overflow in Windows subprocess creation code.

- Issue #23363: Fix possible overflow in itertools.permutations.

- Issue #23364: Fix possible overflow in itertools.product.

- Issue #23369: Fixed possible integer overflow in
  _json.encode_basestring_ascii.

- Issue #23366: Fixed possible integer overflow in itertools.combinations.

- Issue #23365: Fixed possible integer overflow in
  itertools.combinations_with_replacement.

C API
-----

- Issue #23998: PyImport_ReInitLock() now checks for lock allocation error

Tests
-----

- Issue #25940: Changed test_ssl and test_httplib to use
  self-signed.pythontest.net.  This avoids relying on svn.python.org, which
  recently changed root certificate.


What's New in Python 3.3.6?
===========================

*Release date: 11-Oct-2014*

Core and Builtins
-----------------

- Issue #22643: Fix integer overflow in Unicode case operations (upper, lower,
  title, swapcase, casefold).

- Issue #22518: Fixed integer overflow issues in "backslashreplace",
  "xmlcharrefreplace", and "surrogatepass" error handlers.
