@@ -10,7 +10,12 @@ What's New in Python 3.3.7?
 Core and Builtins
 -----------------
 
+- Issue #25709: Fixed problem with in-place string concatenation and utf-8 cache.
+
 - Issue #24407: Fix crash when dict is mutated while being updated.
+
+- Issue #24097: Fixed crash in object.__reduce__() if slot name is freed inside
+  __getattr__.
 
 - Issue #24096: Make warnings.warn_explicit more robust against mutation of the
   warnings.filters list.
